--- a/roles/jenkins/templates/mbranch.xml
+++ b/roles/jenkins/templates/mbranch.xml
@@ -1,16 +1,16 @@
 <?xml version='1.1' encoding='UTF-8'?>
-<org.jenkinsci.plugins.workflow.multibranch.WorkflowMultiBranchProject plugin="workflow-multibranch@716.vc692a_e52371b_">
+<org.jenkinsci.plugins.workflow.multibranch.WorkflowMultiBranchProject plugin="workflow-multibranch">
     <actions/>
     <description></description>
     <properties/>
-    <folderViews class="jenkins.branch.MultiBranchProjectViewHolder" plugin="branch-api@2.1046.v0ca_37783ecc5">
+    <folderViews class="jenkins.branch.MultiBranchProjectViewHolder" plugin="branch-api">
         <owner class="org.jenkinsci.plugins.workflow.multibranch.WorkflowMultiBranchProject" reference="../.."/>
     </folderViews>
     <healthMetrics/>
-    <icon class="jenkins.branch.MetadataActionFolderIcon" plugin="branch-api@2.1046.v0ca_37783ecc5">
+    <icon class="jenkins.branch.MetadataActionFolderIcon" plugin="branch-api">
         <owner class="org.jenkinsci.plugins.workflow.multibranch.WorkflowMultiBranchProject" reference="../.."/>
     </icon>
-    <orphanedItemStrategy class="com.cloudbees.hudson.plugins.folder.computed.DefaultOrphanedItemStrategy" plugin="cloudbees-folder@6.758.vfd75d09eea_a_1">
+    <orphanedItemStrategy class="com.cloudbees.hudson.plugins.folder.computed.DefaultOrphanedItemStrategy" plugin="cloudbees-folder">
         <pruneDeadBranches>true</pruneDeadBranches>
         <daysToKeep>-1</daysToKeep>
         <numToKeep>-1</numToKeep>
@@ -18,10 +18,10 @@
     </orphanedItemStrategy>
     <triggers/>
     <disabled>false</disabled>
-    <sources class="jenkins.branch.MultiBranchProject$BranchSourceList" plugin="branch-api@2.1046.v0ca_37783ecc5">
+    <sources class="jenkins.branch.MultiBranchProject$BranchSourceList" plugin="branch-api">
         <data>
             <jenkins.branch.BranchSource>
-                <source class="jenkins.plugins.git.GitSCMSource" plugin="git@4.13.0">
+                <source class="jenkins.plugins.git.GitSCMSource" plugin="git">
                     <id>8d4c445a-eac6-4eb4-88ba-19c1b09be667</id>
                     <remote>https://github.com/Nayeemm0772/ctest</remote>
                     <credentialsId></credentialsId>
