--- a/roles/jenkins/templates/mbranch.xml
+++ b/roles/jenkins/templates/mbranch.xml
@@ -23,7 +23,7 @@
             <jenkins.branch.BranchSource>
                 <source class="jenkins.plugins.git.GitSCMSource" plugin="git">
                     <id>8d4c445a-eac6-4eb4-88ba-19c1b09be667</id>
-                    <remote>https://github.com/Nayeemm0772/ctest</remote>
+                    <remote>https://github.com/Nayeemm0772/{{item.name}}</remote>
                     <credentialsId></credentialsId>
                     <traits>
                         <jenkins.plugins.git.traits.BranchDiscoveryTrait/>
